components/app-configs/httpbin/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpbin
    deployment: httpbin
  sessionAffinity: None
  type: ClusterIP
