components/app-configs/httpbin/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpbin
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: httpbin
    weight: 100
  wildcardPolicy: None
